# ChangeLog for sci-libs/fftw
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.117 2011/06/21 15:37:40 jlec Exp $

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> fftw-2.1.5-r5.ebuild,
  fftw-2.1.5-r8.ebuild, fftw-3.2.2.ebuild, fftw-3.2.2-r1.ebuild:
  Add dependency on virtual/fortran

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> fftw-2.1.5-r5.ebuild,
  fftw-2.1.5-r8.ebuild:
  Add dependency on virtual/fortran

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> fftw-2.1.5-r5.ebuild,
  fftw-2.1.5-r8.ebuild, fftw-3.2.2.ebuild, fftw-3.2.2-r1.ebuild:
  Fix fortran-2.eclass support

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> fftw-2.1.5-r5.ebuild,
  fftw-2.1.5-r8.ebuild, fftw-3.2.2.ebuild, fftw-3.2.2-r1.ebuild:
  Added fortran-2.eclass support

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> fftw-2.1.5-r8.ebuild:
  ppc/ppc64 stable wrt #351745

  29 Jan 2011; Raúl Porcel <armin76@gentoo.org> fftw-2.1.5-r8.ebuild:
  alpha/ia64/s390/sparc stable wrt #351745

  18 Jan 2011; Jeroen Roovers <jer@gentoo.org> fftw-2.1.5-r8.ebuild:
  Stable for HPPA (bug #351745).

  16 Jan 2011; Thomas Kahle <tomka@gentoo.org> fftw-2.1.5-r8.ebuild:
  x86 stable per bug 351745

*fftw-2.1.5-r8 (15 Jan 2011)

  15 Jan 2011; Justin Lecher <jlec@gentoo.org> -fftw-2.1.5-r7.ebuild,
  +fftw-2.1.5-r8.ebuild:
  Revert changes in src_configure, #351786

  15 Jan 2011; Markos Chandras <hwoarang@gentoo.org> fftw-2.1.5-r7.ebuild:
  Stable on amd64 wrt bug #351745

  15 Jan 2011; Justin Lecher <jlec@gentoo.org> fftw-2.1.5-r5.ebuild,
  -fftw-2.1.5-r6.ebuild, fftw-2.1.5-r7.ebuild:
  Removed old, restructured double building, fixed openmp check, #340469

*fftw-3.2.2-r1 (02 Dec 2010)

  02 Dec 2010; Justin Lecher <jlec@gentoo.org> +fftw-3.2.2-r1.ebuild,
  +files/fftw-3.2.2-pc-threads.patch:
  Install pc files for threads

*fftw-2.1.5-r7 (03 Nov 2010)
