@@ -9,16 +9,16 @@ AUX fftw-3.2.1-as-needed.patch 3184 RMD160 fe4e353851780d1520cfa95cd4403ec7045d9
 AUX fftw-3.2.2-pc-threads.patch 650 RMD160 3d0bb0caa62d29e2d0e8b5cff9c126276b537f81 SHA1 dd960030a8e49b87fc94c80cc541068c8b9466dd SHA256 26a442c168324623a60d1fc986f9c70ddf2d66d91e5d4a620ded1982bd22a593
 DIST fftw-2.1.5.tar.gz 1256888 RMD160 723308722d76c12710db6473979adf8d086b0909 SHA1 12020b58edc1b0490a83db4aa912fac5dfdfb26b SHA256 f8057fae1c7df8b99116783ef3e94a6a44518d49c72e2e630c24b689c6022630
 DIST fftw-3.2.2.tar.gz 3495117 RMD160 27af9b97072fa3a41b91b9430d093f671a1cd359 SHA1 d43b799eedfb9408f62f9f056f5e8a645618467b SHA256 6aa7ae65ee49eb99004f15899f9bb77f54759122f1a350041e81e096157d768f
-EBUILD fftw-2.1.5-r5.ebuild 3843 RMD160 3e1706d6ee2c1d4926e4c4419c5ab848a3fa4a29 SHA1 3960b6a21d7abed4e0ab44456de97adf9fb5fde0 SHA256 de84561939a1164a049aab791b017a94be5db836a55754c4c51d0fafc29869dc
-EBUILD fftw-2.1.5-r8.ebuild 3984 RMD160 f609a3332b24dfad90fd0f1ac9165f02934c9802 SHA1 8fe380097694ef1f35149eddee4be6aab235d07e SHA256 57ba44f949ae04363d510133521af47c42a987f4f8332421500af56a4278de1e
-EBUILD fftw-3.2.2-r1.ebuild 3742 RMD160 c86e3e3092ac418bc3b1e925ee1462a653f8c1d0 SHA1 ec7885b8f23c9c983db9186e84f3f5a59175677d SHA256 b9ac319d5b62f2e4e0be086bc19eb2bf078b9e104a9d3ad1a9152936e1ecb8dc
-EBUILD fftw-3.2.2.ebuild 3671 RMD160 72f0e38fcc2f22e9748630e6dddba2304a459712 SHA1 2e1dbd661dfdcaf8dd0acb1657865b1c24aa29eb SHA256 1c468b847afdcdfa4380c011b6bd6e34affbabecc19f70f6bde93a7acebe19c6
-MISC ChangeLog 21817 RMD160 b11fa2c1ea14acc5bd873cab931e5a2d2ba899a4 SHA1 fb0d8180b137b5809e03b022fb04e4761f180640 SHA256 cc1a8ed7e061d27ffb1ef4184b92cbb466adccfb3a6ab31a3a53c4cdbc7b3592
+EBUILD fftw-2.1.5-r5.ebuild 3843 RMD160 b87a1e45f8a7fa45a9bd663cccb576e6b787f2be SHA1 1b52fcbc0438e8b2b9a9041baf743e561437c0dc SHA256 aecf18a3fff53f1325d4e797aad819a1ac9fcae672007841223997d4e423125d
+EBUILD fftw-2.1.5-r8.ebuild 3984 RMD160 41b0fd4d44bb9434ec7bb7758c684e3463783933 SHA1 085fe378d09980d5dbea2e60bfaf50e047834685 SHA256 1e49dce881c7618eea3a2465c20c900d19841ca4668e91a652d4eb280690115f
+EBUILD fftw-3.2.2-r1.ebuild 3742 RMD160 14eddca1aec8e6a162b3abf8c01960844d1948b8 SHA1 4cb3dfe4c956a4c3d050bd47b7ce645f3b43b798 SHA256 205acef88b09537bcd1a02dcf00a5cad6ce31cddc690722c21cb59b92071f7e3
+EBUILD fftw-3.2.2.ebuild 3671 RMD160 fd0ec2757bd63b7f5bcee6d34c46de084a8acb37 SHA1 c246551b1b6ddb9ccdc282be2ff5df71d8c82a5d SHA256 eafead37266419279bba2187d5b3c81f903540d16a89e31182c64171faa512a5
+MISC ChangeLog 21972 RMD160 66cddb234ca8082680c52a93431481f874892bb2 SHA1 8d51db7849b2561d6b48f4698d0e8020678ec922 SHA256 522e014f424bd1f04953b3100d55c80a90129b08a23e5666e153380d254a29b4
 MISC metadata.xml 770 RMD160 ca19408a763b8f3db20849456d67c3027cfdba5e SHA1 8c6d41e762d4cc86eaaeee10a2fc9c4743e0e828 SHA256 129a4af8bed71473f17cf323cb11763e09cf9b63eaa764643a1412c649a8c0bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4AusoACgkQgAnW8HDreRYSBACgrvusHIdhNtUGv1L9Q9c+rdsr
-fPcAn1ZUAbu6s3V1gqir1jeX/dmIMRSy
-=FYmf
+iEYEARECAAYFAk4EbeQACgkQgAnW8HDreRaI3gCfYSbCN8bpsw4EMzSIoBgmIJSp
+v0oAnRJf3Id8u74I1MOmZ6SOlveygYTR
+=rg2H
 -----END PGP SIGNATURE-----
