@@ -1,8 +1,8 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/fftw/Attic/fftw-2.1.5-r5.ebuild,v 1.22 2011/06/21 15:37:40 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/fftw/Attic/fftw-2.1.5-r5.ebuild,v 1.23 2011/06/24 10:58:37 jlec Exp $
 
-inherit eutils fortran-2 flag-o-matic autotools toolchain-funcs
+inherit autotools eutils flag-o-matic fortran-2 toolchain-funcs
 
 DESCRIPTION="Fast C library for the Discrete Fourier Transform"
 SRC_URI="http://www.fftw.org/${P}.tar.gz"
