@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/fftw
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.117 2011/06/21 15:37:40 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.118 2011/06/24 10:58:37 jlec Exp $
+
+  24 Jun 2011; Justin Lecher <jlec@gentoo.org> fftw-2.1.5-r5.ebuild,
+  fftw-2.1.5-r8.ebuild, fftw-3.2.2.ebuild, fftw-3.2.2-r1.ebuild:
+  Sort inherit line
 
   21 Jun 2011; Justin Lecher <jlec@gentoo.org> fftw-2.1.5-r5.ebuild,
   fftw-2.1.5-r8.ebuild, fftw-3.2.2.ebuild, fftw-3.2.2-r1.ebuild:
